ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - host: demo-check4.com
    http:
      paths:
      - path: /()
        pathType: ImplementationSpecific
        backend:
          service:
            name: main-service
            port:
              number: 80
      - path: /products(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: product-service
            port:
              number: 80
      - path: /wishlist(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: wishlist-service
            port:
              number: 80
      - path: /cart(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: cart-service
            port:
              number: 80
